--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,19 @@
-name: Build and Run Go Program
+name: testing the go project
 
-on:
-  push:
-    branches:
-      - main
+on: [pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: checkout code
         uses: actions/checkout@v2
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      
+      - name: setup go version 1.19
+        uses: actions/setup-go@v2
         with:
           go-version: '1.19'
-
-      - name: Build Go program
-        run: |
-          go build hello.go
-
-      - name: Run Go program
-        run: |
-          ./hello
+      
+      - name: build go project
+        run: go build hello.go
